[package]
edition = "2021"
name = "pkg_audit_exporter"
version = "0.1.1"

[dependencies]
itertools = "0.13"
log = "0.4"
pretty_env_logger = "0.5"
prometheus_exporter = "0.8"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
