[package]
edition = "2021"
name = "pkg_audit_exporter"
version = "0.1.1"

[dependencies]
axum-macros = "0.4"
axum = { version = "0.7", features = ["json", "macros", "tracing"] }
color-eyre = "0.6"
itertools = "0.13"
metrics-derive = { git = "https://github.com/AlexanderThaller/metrics-derive.git" }
prometheus-client = "0.22"
rand = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full", "tracing"] }
tower-http = { version = "0.5", features = ["compression-full"] }

opentelemetry-otlp = { version = "0.16" }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.15" }
opentelemetry = { version = "0.23" }
tracing = "0.1"
tracing-opentelemetry = "0.24"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
